configuration/minio/minio-middleware-add-trailing-slash.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: minio-add-trailing-slash
  namespace: minio
spec:
  redirectRegex:
    regex: ^.*/minio$
    replacement: /minio/
