configuration/minio/minio-middleware-strip-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: minio-stripprefix
  namespace: minio
spec:
  stripPrefix:
    prefixes:
      - /minio
