configuration/minio/minio-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
  name: minio-lb
  namespace: minio
spec:
  type: LoadBalancer
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: minio
