configuration/minio/minio-ingressroute-with-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-ingressroute
  namespace: minio
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: PathPrefix(`/minio`)
    middlewares:
    - name: minio-add-trailing-slash
    services:
    - name: minio
      port: 9000
